# ViktorAnkiPipe

./: .gitignore  README.md  pyrightconfig.json
client/: CLAUDE.md  analysis_options.yaml  prompt.md  pubspec.yaml
client/.claude/skills/tlc-spec-driven/: .skill-meta.json
client/.specs/features/ai-example/: design.md  spec.md  tasks.md
client/.specs/features/anki-export/: design.md  spec.md  tasks.md
client/.specs/features/camera-ocr/: design.md  spec.md  tasks.md
client/.specs/features/foundation/: design.md  spec.md  tasks.md
client/.specs/features/session-detail/: design.md  spec.md  (+1 more)
client/.specs/project/: PROJECT.md  ROADMAP.md  STATE.md
client/design/: 01-sessions.html  02-camera.html  03-result.html
client/ios/Runner/: Info.plist
client/ios/Runner.xcodeproj/: project.pbxproj
client/lib/: app.dart
client/test/: smoke_test.dart
client/test/core/: api_client_test.dart
server/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
server/migrations/: env.py
server/migrations/versions/: 38ab3555de66_add_created_at_to_sessions.py  4f632feceb91_initial_schema.py  54c7d08eb378_add_source_to_sessions.py
server/src/: config.py  constants.py  database.py  exceptions.py  main.py
server/src/cache/: models.py
server/src/cards/: ai_service.py  dependencies.py  exceptions.py  models.py  routes.py  schemas.py  service.py  translator.py
server/src/sessions/: dependencies.py  exceptions.py  models.py  routes.py  schemas.py  service.py
server/tests/: conftest.py  test_cards.py  test_sessions.py
(+67 files in other folders)
